ArgoCD-Sesac-Application/Application/frontend/frontend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: 637423586845.dkr.ecr.ap-northeast-2.amazonaws.com/github-action-test:frontend-v2.0.0
          ports:
            - containerPort: 3000
